--- a/index.html
+++ b/index.html
@@ -1,6 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-	hectlite
+	 <meta name="hectlite">
+  <meta keyword="hectlite.tk">
+  <meta charset="utf-8">
+  <link rel="icon"type="image/jpg"href="file:///C:/Users/25576/Downloads/1.png">
+  <title>hectlite</title>
+   <link rel="stylesheet" type="text/css" href="index2.css">
 </head>
-<p>hectlite</p>
+<body>
+	<div class="sidenav">
+  <a href="#about">About</a>
+  <a href="#services">Services</a>
+  <a href="#clients">Clients</a>
+  <a href="#contact">Contact</a>
+  <button class="dropdown-btn">Dropdown
+    <i class="fa fa-caret-down"></i>
+  </button>
+  <div class="dropdown-container">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+  <a href="#contact">Search</a>
+</div>
+	
+<div class="navbar">
+	<img src="C:/Users/25576/Downloads/1.png">
+  <a href="#home">Home</a>
+  <a href="#news">hectonic</a>
+  <a href="#news">hectux</a>
+  <a href="#news">mortline</a>
+  <div class="dropdown">
+    <button class="dropbtn">register
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">sign in</a>
+      <a href="#">sign up</a>   
+    </div>
+  </div>
+</div>
+ 				   
+</body>
+</html>
+		<marquee>
+
+			<img src="C:/Users/25576/Downloads/1.png">
+
+		</marquee>
