--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	 <meta name="hectlite">
   <meta keyword="hectlite.tk">
   <meta charset="utf-8">
-  <link rel="icon"type="image/jpg"href="file:///C:/Users/25576/Downloads/1.png">
+  <link rel="icon"type="https://github.com/hectlite/hectlite.tk/blob/main/1.png">
   <title>hectlite</title>
    <link rel="stylesheet" type="text/css" href="index2.css">
 </head>
