--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	
+	<script data-ad-client="ca-pub-9451128881965007" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	
 	 <meta name="hectlite">
   <meta keyword="hectlite.tk">
   <meta charset="utf-8">
@@ -47,6 +49,6 @@
 </html>
 		<marquee>
 
-			<img src="C:/Users/25576/Downloads/1.png">
+			<img src="https://github.com/hectlite/hectlite.tk/blob/main/1.png">
 
 		</marquee>
