--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="hectlite">
   <meta keyword="hectlite">
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <link rel="icon"type="image/jpg"href="https://lh3.googleusercontent.com/ogw/ADGmqu8-PUdeYzNENuILvYVAbuPxA4fiOlnquX0B0CT9=s32-c-mo">
   <title>hectlite</title>
    <link rel="stylesheet" type="text/css" href="index2.css">
