--- a/index.html
+++ b/index.html
@@ -52,5 +52,5 @@
 
 </body>
 <body>
-	<center><p>copyright&copy;<a href="hectlite.tk">hectlite</a></center>
+	<center><p>copyright&copy;<a href="https://hectlite.tk/">hectlite</a></center>
 <html>
