--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta name="hectlite">
   <meta keyword="hectlite">
   <meta charset="UTF-8">
+	<script data-ad-client="ca-pub-9451128881965007" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <link rel="icon"type="image/jpg"href="https://lh3.googleusercontent.com/ogw/ADGmqu8-PUdeYzNENuILvYVAbuPxA4fiOlnquX0B0CT9=s32-c-mo">
   <title>hectlite</title>
    <link rel="stylesheet" type="text/css" href="index2.css">
