--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<div id="my-store-42357197"></div>
+<div>
+<script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?42357197&data_platform=code&data_date=2020-12-07" charset="utf-8"></script><script type="text/javascript"> xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","id=my-store-42357197");</script>
+</div>
 	<meta name="hectlite">
   <meta keyword="hectlite">
   <meta charset="UTF-8">
