--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
 	<li><a href="mortlineimpurities.ga">mortline</li>
 	<li><a href="#"> Our Status</li>
 	<li><a href="#">About</li>
-		<li><a href="
-<script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?42357197&data_platform=code&data_date=2020-12-07" charset="utf-8"></script><script type="text/javascript"> xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","id=my-store-42357197");</script>">stores</li>
 	<li><a href="login.html" class="signup-btn"><span>Accounts</span></a></li>
 	</ul>
 	</div>
@@ -54,6 +52,11 @@
 </div>
 
 </body>
+	<body>
+		<div>
+			<script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?42357197&data_platform=code&data_date=2020-12-07" charset="utf-8"></script><script type="text/javascript"> xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","id=my-store-42357197");</script>">
+		</div>
+	</body>
 <body>
 	<center><p>copyright&copy;<a href="index.html">hectlite</a></center>
 <html>
