--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
   </div>
 </body>
   <body>
-    <form class="box" action="connect.php" method="post">
+    <form class="box" action="index.html" method="post">
       <h1>Sign up</h1>
       <input type="text" name="" placeholder="Username">
       <input type="password" name="" placeholder="password">
