--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 		<ul>
 			<li><a href="https://www.instagram.com/hectlite/"><i class="fa fa-instagram" aria-hidden="true"></i></li>
 				<li><a href="https://web.facebook.com/hectlite.hecto.5"><i class="fa fa-facebook-square" aria-hidden="true"></i></li>
-					<li><a href="https://www.youtube.com/channel/UCvv9NuJJXJtH0E4_uxIr9XQ"><i class="fa fa-youtube-play" aria-hidden="true"></i>
+					<li><a href="https://www.youtube.com/channel/UCvv9NuJJXJtH0E4_uxIr9XQ"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+			<br>
 <i class="fa fa-envelope" aria-hidden="true">hectlite@gmail.com</i>
 					
 </li>
