--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta keyword="hectlite">
   <meta charset="UTF-8">
   <title>hectnet softwares</title>
-   <link rel="stylesheet" type="text/css" href="index3.css">
-   <link rel="icon"type="image/jpg"href="file:///C:/Users/25576/Documents/SharedScreenshot.jpg">
+   <link rel="stylesheet" type="text/css" href="index.css">
+   <link rel="icon"type="image/jpg"href="https://1.bp.blogspot.com/-hjVx-cyN-aw/YCOofvHTcUI/AAAAAAAAADs/ZBRPCCrgwGsTUuyArA-mNHJ74e_YvdtKgCLcBGAsYHQ/w128-h128-p-k-no-nu/SharedScreenshot.jpg">
    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,7 +17,7 @@
 &nbsp;
 &nbsp;
 <center>
-		<img src="file:///C:/Users/25576/Documents/vbc.jpg" style="float: left;">
+		<img src="https://1.bp.blogspot.com/-XEinMXUqCDA/YCOovBvd46I/AAAAAAAAAD0/jqmkENaMkVMDqn67cQVE0MewAwWQeivRgCLcBGAsYHQ/w945-h600-p-k-no-nu/vbc.jpg" style="float: left;">
 <nav>
 	
 	<p style="margin: 0px;">
