--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<a href="#">animating</a> &nbsp;
 	</button>
 	<button>
-	<a href="#">editing</a> &nbsp;
+	<a href="editing.html">editing</a> &nbsp;
 </button>
 <button>
 	<a href="#">system softwares</a> &nbsp;
