--- a/editing.html
+++ b/editing.html
@@ -53,7 +53,7 @@
   
   		<center>
   		<button>
-  			<a href="https://github.com/mltframework/shotcut/releases/download/v21.01.29/shotcut-win64-210129.exe">DOWNLOAD 64bit</a>
+  			<a href="https://download.kde.org/stable/kdenlive/20.12/windows/kdenlive-20.12.1.exe">DOWNLOAD 64bit</a>
   		</button>
   	</center><br><br><br><br><br>
   <div>
