--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<a href="#">home</a> &nbsp;
 </button>
 <button>
-	<a href="#">animating</a> &nbsp;
+	<a href="animating.html">animating</a> &nbsp;
 	</button>
 	<button>
 	<a href="editing.html">editing</a> &nbsp;
