--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<a href="editing.html">editing</a> &nbsp;
 </button>
 <button>
-	<a href="#">system softwares</a> &nbsp;
+	<a href="#">support softwares</a> &nbsp;
 </button>
 <button>
 	<a href="#">networking</a> &nbsp;
