--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 		<button>
 	<a href="#">home</a> &nbsp;
 </button>
-<button>
-	<a href="animating.html">animating</a> &nbsp;
-	</button>
+
+		<a href="animating.html"><button>animating</button></a> &nbsp;
+	
 	<button>
 	<a href="editing.html">editing</a> &nbsp;
 </button>
