--- a/index.html
+++ b/index.html
@@ -21,30 +21,30 @@
 <nav>
 	
 	<p style="margin: 0px;">
-		<button>
-	<a href="#">home</a> &nbsp;
-</button>
+		
+	<a href="#"><button>home</button></a> &nbsp;
+
 
 		<a href="animating.html"><button>animating</button></a> &nbsp;
 	
-	<button>
-	<a href="editing.html">editing</a> &nbsp;
-</button>
-<button>
-	<a href="#">support softwares</a> &nbsp;
-</button>
-<button>
-	<a href="#">networking</a> &nbsp;
-</button>
-<button>
-	<a href="#">utility softwares</a> &nbsp;
-</button>
-<button>
-	<a href="#">office</a> &nbsp;
-</button>
-<button>
-	<a href="#">programming</a> &nbsp;
-</button>
+	
+	<a href="editing.html"><button>editing</button></a> &nbsp;
+
+
+	<a href="#"><button>support softwares</button></a> &nbsp;
+
+
+	<a href="#"><button>networking</button></a> &nbsp;
+
+
+	<a href="#"><button>utility softwares</button></a> &nbsp;
+
+
+	<a href="#"><button>office</button></a> &nbsp;
+
+
+	<a href="#"><button>programming</button></a> &nbsp;
+
 </p>
 </nav>
 </center>
