--- a/index.html
+++ b/index.html
@@ -6,45 +6,43 @@
   <meta charset="UTF-8">
   <title>hectnet softwares</title>
    <link rel="stylesheet" type="text/css" href="index.css">
-   <link rel="icon"type="image/jpg"href="https://1.bp.blogspot.com/-hjVx-cyN-aw/YCOofvHTcUI/AAAAAAAAADs/ZBRPCCrgwGsTUuyArA-mNHJ74e_YvdtKgCLcBGAsYHQ/w128-h128-p-k-no-nu/SharedScreenshot.jpg">
+   <link rel="icon"type="image/jpg"href="file:///C:/Users/25576/Documents/SharedScreenshot.jpg">
    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
-<body oncontextmenu="return false">
+<body>
 &nbsp;	
 &nbsp;
 &nbsp;
 <center>
-		<img src="https://1.bp.blogspot.com/-XEinMXUqCDA/YCOovBvd46I/AAAAAAAAAD0/jqmkENaMkVMDqn67cQVE0MewAwWQeivRgCLcBGAsYHQ/w945-h600-p-k-no-nu/vbc.jpg" style="float: left;">
+		<img src="file:///C:/Users/25576/Documents/vbc.jpg" style="float: left;">
 <nav>
 	
 	<p style="margin: 0px;">
-		
-	<a href="#"><button>home</button></a> &nbsp;
+		<a href="#"><button><i class="fas fa-home"></i>home</button></a> &nbsp;
 
 
-		<a href="animating.html"><button>animating</button></a> &nbsp;
-	
-	
-	<a href="editing.html"><button>editing</button></a> &nbsp;
+    <a href="animating.html"><button>animating</button></a> &nbsp;
+  
+  
+  <a href="editing.html"><button>editing</button></a> &nbsp;
 
 
-	<a href="#"><button>support softwares</button></a> &nbsp;
+  <a href="#"><button>support softwares</button></a> &nbsp;
 
 
-	<a href="#"><button>networking</button></a> &nbsp;
+  <a href="#"><button><i class="fas fa-globe"></i>networking</button></a> &nbsp;
 
 
-	<a href="#"><button>utility softwares</button></a> &nbsp;
+  <a href="#"><button>utility softwares</button></a> &nbsp;
 
 
-	<a href="#"><button>office</button></a> &nbsp;
+  <a href="#"><button>office</button></a> &nbsp;
 
 
-	<a href="#"><button>programming</button></a> &nbsp;
-
+  <a href="#"><button><i class="fas fa-code"></i>programming</button></a> &nbsp;
 </p>
 </nav>
 </center>
