--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 &nbsp;
 &nbsp;
 <center>
-		<img src="file:///C:/Users/25576/Documents/vbc.jpg" style="float: left;">
+		<img src="vbc.jpg" style="float: left;">
 <nav>
 	
 	<p style="margin: 0px;">
