--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="hectlite">
   <meta keyword="hectlite">
   <meta charset="UTF-8">
@@ -17,11 +18,11 @@
 &nbsp;
 &nbsp;
 <center>
-		<img src="vbc.jpg" style="float: left;">
+		<img src="file:///C:/Users/25576/Documents/vbc.jpg" style="float: left;">
 <nav>
 	
 	<p style="margin: 0px;">
-		<a href="#"><button><i class="fas fa-home"></i>home</button></a> &nbsp;
+		<a href="index.html"><button><i class="fas fa-home"></i>home</button></a> &nbsp;
 
 
     <a href="animating.html"><button>animating</button></a> &nbsp;
@@ -30,19 +31,16 @@
   <a href="editing.html"><button>editing</button></a> &nbsp;
 
 
-  <a href="#"><button>support softwares</button></a> &nbsp;
+  <a href="system.html"><button>support softwares</button></a> &nbsp;
 
 
-  <a href="#"><button><i class="fas fa-globe"></i>networking</button></a> &nbsp;
+  <a href="network.html"><button><i class="fas fa-globe"></i>networking</button></a> &nbsp;
 
 
-  <a href="#"><button>utility softwares</button></a> &nbsp;
+  <a href="office.html"><button>office</button></a> &nbsp;
 
 
-  <a href="#"><button>office</button></a> &nbsp;
-
-
-  <a href="#"><button><i class="fas fa-code"></i>programming</button></a> &nbsp;
+  <a href="programming.html"><button><i class="fas fa-code"></i>programming</button></a> &nbsp;
 </p>
 </nav>
 </center>
