--- a/animating.html
+++ b/animating.html
@@ -5,7 +5,7 @@
   <meta keyword="hectlite">
   <meta charset="UTF-8">
   <title>hectnet softwares</title>
-   <link rel="stylesheet" type="text/css" href="editing.css">
+   <link rel="stylesheet" type="text/css" href="animating.css.css">
    <link rel="icon"type="image/jpg"href="file:///C:/Users/25576/Documents/SharedScreenshot.jpg">
    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<video autoplay muted loop id="myVideo">
-  <source src="Alien - 3D Animation.mp4" type="video/mp4">
+  <source src="file:///C:/Users/25576/Downloads/Alien%20-%203D%20Animation.mp4" type="video/mp4">
 </video>
 <div class="content">
 	<h1>
@@ -22,13 +22,13 @@
   <hr class="rounded">
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdTRkVudsVTx2GQpB_dpk8bcbGhVf80OJdsw&usqp=CAU">
   <center>
-  	<button>
-  		<a href="https://www.filehorse.com/download/file/WWSl3B_zDdXT76JHjMivs8ULYVlQqY9JGttv4kHRVIBLJOlUpFs2AdkjQ5KkmthXwIrPSdbEwC1eAeQymgERS7vtLO3jyQo8bv2xgkTdbow/">DOWNLOAD 32bit</a>
-  		</button></center>
+  	
+<a href="https://www.filehorse.com/download/file/WWSl3B_zDdXT76JHjMivs8ULYVlQqY9JGttv4kHRVIBLJOlUpFs2AdkjQ5KkmthXwIrPSdbEwC1eAeQymgERS7vtLO3jyQo8bv2xgkTdbow/"><button>DOWNLOAD 32bit</button></a>
+  		</center>
   		<center>
-  		<button>
-  			<a href="https://www.filehorse.com/download/file/EWQ-NXGswN445Ou9v2CjYZO7OR4-xj2D51LHyUjI3dqJHALiCw_VZiVqG7DaVInFnM6q3lHfxefvq45-ceI79HBOfpEDJIqlrqSM9SyZ1uE/">DOWNLOAD 64bit</a>
-  		</button>
+  		
+  			<a href="https://www.filehorse.com/download/file/EWQ-NXGswN445Ou9v2CjYZO7OR4-xj2D51LHyUjI3dqJHALiCw_VZiVqG7DaVInFnM6q3lHfxefvq45-ceI79HBOfpEDJIqlrqSM9SyZ1uE/"><button>DOWNLOAD 64bit</button></a>
+  		
   	</center><br><br><br><br><br>
   <div>
 <p>64-bit dual core 2Ghz CPU with SSE2 support </p>
