--- a/animating.html
+++ b/animating.html
@@ -5,7 +5,7 @@
   <meta keyword="hectlite">
   <meta charset="UTF-8">
   <title>hectnet softwares</title>
-   <link rel="stylesheet" type="text/css" href="animating.css.css">
+   <link rel="stylesheet" type="text/css" href="animating.css">
    <link rel="icon"type="image/jpg"href="file:///C:/Users/25576/Documents/SharedScreenshot.jpg">
    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
