--- a/animating.html
+++ b/animating.html
@@ -51,9 +51,9 @@
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTLLL4eV3aOF_ti023ywtbg9b1nYydFkqg0vA&usqp=CAU">
   
   		<center>
-  		<button>
-  			<a href="https://www.animaker.com/">visit and create your passion</a>
-  		</button>
+  		
+  			<a href="https://www.animaker.com/"><button>visit and create your passion</button></a>
+  		
   	</center><br><br><br><br><br><br>
   <div>
 <p>64-bit dual core 2Ghz CPU with SSE2 support </p>
