--- a/animating.html
+++ b/animating.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<video autoplay muted loop id="myVideo">
-  <source src="file:///C:/Users/25576/Downloads/Alien%20-%203D%20Animation.mp4" type="video/mp4">
+  <source src="anim.mp4" type="video/mp4">
 </video>
 <div class="content">
 	<h1>
