--- a/editing.html
+++ b/editing.html
@@ -21,7 +21,7 @@
 	</h1>
   <hr class="rounded">
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGbuHc1twecIF4Bx_uUoIidGQr6OUmuhrugg&usqp=CAU">
-  <img src="file:///C:/Users/25576/Documents/shotcut.jpg">
+  <img src="shotcut.jpg">
   <center>
   <a href="https://github.com/mltframework/shotcut/releases/download/v20.09.27/shotcut-win32-200927.exe"><button>DOWNLOAD 32bit</button></a>
   		</center>
