--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 <div>
 	<center><br><br><h1>HectNet SoftWares</h1></center>
 		<center>
-			<div class="search-box">
-				<input class="search-txt" type="text" name="" placeholder="search HectNet SoftWares ">
-				<a class="search-btn" href="#">
-					<i class="fas fa-search"></i>
+			<form>
+  <input type="text" name="search" placeholder="🤖Search..">
+
+</form>
 				</a>
 	</center>
 <br><br><br>
