--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- 
+ <script data-ad-client="ca-pub-9451128881965007" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<meta name="hectlite">
   <meta keyword="hectlite">
   <meta charset="UTF-8">
