--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script>
+Window.alert("the CEO of hectlite org
+              Is apologizing under what
+              Is going is that our org
+              Is again under long time
+              Construction sorry") 
+</script>
 
 </head>
 <body>
-&nbsp;	
+&nbsp;
 &nbsp;
 &nbsp;
 <center>
