--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <script data-ad-client="ca-pub-9451128881965007" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  
 	<meta name="hectlite">
   <meta keyword="hectlite">
   <meta charset="UTF-8">
@@ -11,21 +11,14 @@
    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script>
-Window.alert("the CEO of hectlite org
-              Is apologizing under what
-              Is going is that our org
-              Is again under long time
-              Construction sorry") 
-</script>
 
 </head>
 <body>
-&nbsp;
+&nbsp;	
 &nbsp;
 &nbsp;
 <center>
-		<img src="vbc.jpg" style="float: left;">
+		<img src="file:///C:/Users/25576/Documents/vbc.jpg" style="float: left;">
 <nav>
 	
 	<p style="margin: 0px;">
@@ -48,33 +41,19 @@ Window.alert("the CEO of hectlite org
 
 
   <a href="programming.html"><button><i class="fas fa-code"></i>programming</button></a> &nbsp;
-		
 </p>
 </nav>
 </center>
 <div>
 	<center><br><br><h1>HectNet SoftWares</h1></center>
 		<center>
-			<form>
-  <input type="search" value="" id="search" onchange="openpage()" placeholder="🤖Search..">
-<script>
-   function openpage(){
-    var x = document.getElementById("search").value;
-   if(x === "hectlite"){
-    window.open(/index.html);
-}
+			
+<form>
+  <input type="text" name="search" placeholder="🤖Search..">
 
-if(x === "blender"){
-    window.open(animating.html);
-}
-
-}
-<script>
 </form>
 				</a>
 	</center>
-<br><br><br>
-
 <br><br><br>
 <center><br><br><h2>recently added</h2></center>
 	<div class="slideshow-container">
