--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,80 +12,7 @@
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box;}
 
-/* Button used to open the chat form - fixed at the bottom of the page */
-.open-button {
-  background-color: #555;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  opacity: 0.8;
-  position: fixed;
-  bottom: 23px;
-  right: 28px;
-  width: 280px;
-}
-
-/* The popup chat - hidden by default */
-.chat-popup {
-  display: none;
-  position: fixed;
-  bottom: 0;
-  right: 15px;
-  border: 3px solid #f1f1f1;
-  z-index: 9;
-}
-
-/* Add styles to the form container */
-.form-container {
-  max-width: 300px;
-  padding: 10px;
-  background-color: white;
-}
-
-/* Full-width textarea */
-.form-container textarea {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  border: none;
-  background: #f1f1f1;
-  resize: none;
-  min-height: 200px;
-}
-
-/* When the textarea gets focus, do something */
-.form-container textarea:focus {
-  background-color: #ddd;
-  outline: none;
-}
-
-/* Set a style for the submit/send button */
-.form-container .btn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  margin-bottom:10px;
-  opacity: 0.8;
-}
-
-/* Add a red background color to the cancel button */
-.form-container .cancel {
-  background-color: red;
-}
-
-/* Add some hover effects to buttons */
-.form-container .btn:hover, .open-button:hover {
-  opacity: 1;
-}
-</style>
 </head>
 <body>
 &nbsp;	
@@ -185,6 +111,12 @@ function showSlides() {
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSurGUvOeK6_9QiYAWw1Oh9VRg2J83n4d2ZcA&usqp=CAU">
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDh69rVU8wB1v1x-WemJG3vHaacDHAaZqkbQ&usqp=CAU">
  <hr class="rounded">
+ &nbsp;
+  &nbsp;
+   &nbsp;
+    &nbsp;
+     &nbsp;
+      &nbsp;
 <div class="footer">
   <div class="inner-footer">
     <div class="footer-items">
@@ -236,6 +168,80 @@ function closeForm() {
   document.getElementById("myForm").style.display = "none";
 }
 </script>
+<style>
+body {font-family: Arial, Helvetica, sans-serif;}
+* {box-sizing: border-box;}
+
+/* Button used to open the chat form - fixed at the bottom of the page */
+.open-button {
+  background-color: #555;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 23px;
+  right: 28px;
+  width: 280px;
+}
+
+/* The popup chat - hidden by default */
+.chat-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+  max-width: 300px;
+  padding: 10px;
+  background-color: white;
+}
+
+/* Full-width textarea */
+.form-container textarea {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+  resize: none;
+  min-height: 200px;
+}
+
+/* When the textarea gets focus, do something */
+.form-container textarea:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit/send button */
+.form-container .btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
+}
+</style>
       </ul>
   </div>
  
@@ -248,7 +254,7 @@ function closeForm() {
         <a href="office.html"><li>office</li></a>
         <a href="editing.html"><li>editing</li></a>
         <a href="system.html"><li>system</li></a>
-        <a href="networking.html"><li>networking</li></a>
+        <a href="network.html"><li>networking</li></a>
       </ul>
   </div>
 
@@ -261,12 +267,16 @@ function closeForm() {
         <li><i class="fas fa-phone-volume"></i>+255622247653</li>
         <li><i class="fas fa-envelope"></i>>hectlite@gmail.com</li>
       </ul>
+      <br>
+      <br>
       <div class="social-media">
         <a href="https://web.facebook.com/hectlite.hecto.5"><i class="fab fa-facebook"></i></a>
          <a href="https://www.instagram.com/hectlite/"><i class="fab fa-instagram"></i></a>
           <a href="https://www.youtube.com/channel/UCvv9NuJJXJtH0E4_uxIr9XQ"><i class="fab fa-youtube"></i></a>
           <a href="https://www.linkedin.com/in/hectlite-org-75688a207/"><i class="fab fa-linkedin"></i></a>
         </div>
+        <br>
+        <br>
         <div class="footer-bottom">
            Copyright &copy;  all-rights-reserved &reg;2021 hectlite org<br>
       No part or material may be reproduced without prior permission from hectlite org
