--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <title>hectnet softwares</title>
    <link rel="stylesheet" type="text/css" href="index.css">
-   <link rel="icon"type="image/jpg"href="file:///C:/Users/25576/Documents/SharedScreenshot.jpg">
+   <link rel="icon"type="image/jpg"href="SharedScreenshot.jpg">
    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -131,7 +131,7 @@ function showSlides() {
           &bullet;non-curbing user-friendliness 
                    & interaction <br>
           &bullet;one-time click download & many<br>
-          <img src="file:///C:/Users/25576/Documents/SharedScreenshot.jpg">
+          <img src="SharedScreenshot.jpg">
                    
       </p>
       
