--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
+
+<script async src="https://cst.cstwpush.com/static/adManager.js" data-admpid="3770"></script>
 	<meta name="hectlite">
   <meta keyword="hectlite">
   <meta charset="UTF-8">
